2004-02-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/maketestam.pl:
  - Removed redundant -I option
 tools/pqxxbench.cxx, tools/pqxxbench.in:
  - New
2004-02-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test049.cxx:
  - Make count_if() compile on Sun CC (thanks Jon Meinecke)
2004-02-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh, configure.ac.in:
  - Patrick Welche patch: make libtoolize "copy over the necessary .m4 files
  into ., then aclocal looks in . and adds them to aclocal.m4, and everything
  is happy."
  - Patrick Welche cont'd: "Didn't need to remove RANLIB, but as you require a
  reasonably new autoconf, int won't hurt..)"
  - Moved m4 stuff into config/m4, thanks Patrick Welche
 include/pqxx/cachedresult.h, include/pqxx/cursor.h:
  - Workaround for Sun CC compile problem (thanks Jon Meinecke)
2004-02-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx:
  - Back to full test coverage
 test/test071.cxx:
  - Made reverse_iterator part conditional on PQXX_HAVE_REVERSE_ITERATOR
 test/test075.cxx:
  - New
  - Tests reverse result iteration (including rbegin() and rend())
 win32/libpqxx.mak:
  - Added winsock32 library to link options (thanks Fred Moyer)
2004-02-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/config.h.in:
  - Removed redundant definitions
 src/connection_base.cxx:
  - Made unistd.h include conditional (thanks Fred Moyer)
2004-02-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/isolation.hxx:
  - Removed unused implemented() functions
 include/pqxx/libcompiler.h:
  - Trying PQXX_TYPENAME workaround for SUN compiler...
 test/test046.cxx, test/test049.cxx, test/test074.cxx:
  - Compile fixes, thanks Greg Webber!
2004-02-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/libcompiler.h:
  - Fixed SUN compiler version check (thanks Jon Meinecke, Greg Webber)
2004-02-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Check for functional count_if() (Jon Meinecke)
  - Several AC_TRY_COMPILE checks fixed