@@ -11,4 +11,8 @@ pqxxbench_SOURCES = pqxxbench.cxx
 pqxxbench_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
 pqxxbench_PROGRAMS = pqxxbench
 
+rmlodir = .
+rmlo_SOURCES = rmlo.cxx
+rmlo_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+rmlo_PROGRAMS = rmlo
 
